# timer

./: .gitignore  CMakeLists.txt  readme.md
include/mith/: CTimer.h  Timer.h
src/: CTimer.c  Timer.cpp
test/: CTimer.t.cpp  Timer.t.cpp
